[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/themes/default.theme" type="Theme" id=1]
[ext_resource path="res://scenes/ui/GameMenu/GameMenu.gd" type="Script" id=2]
[ext_resource path="res://scenes/ui/windows/OptionsWindow/OptionsWindow.tscn" type="PackedScene" id=3]

[sub_resource type="Gradient" id=1]
colors = PoolColorArray( 0.0705882, 0.0980392, 0.121569, 1, 0.0705882, 0.0980392, 0.121569, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[node name="GameMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="."]
self_modulate = Color( 1, 0.654902, 0, 1 )
anchor_right = 1.0
margin_bottom = 4.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = SubResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 984.0
margin_bottom = 560.0

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 984.0
margin_bottom = 25.0
text = "title_menu"
align = 1
valign = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
margin_top = 29.0
margin_right = 984.0
margin_bottom = 33.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResumeButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 37.0
margin_right = 984.0
margin_bottom = 67.0
rect_min_size = Vector2( 0, 30 )
text = "btn_resume"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 71.0
margin_right = 984.0
margin_bottom = 101.0
rect_min_size = Vector2( 0, 30 )
text = "btn_options"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 105.0
margin_right = 984.0
margin_bottom = 135.0
rect_min_size = Vector2( 0, 30 )
text = "btn_quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsWindow" parent="." instance=ExtResource( 3 )]

[connection signal="pressed" from="MarginContainer/VBoxContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
